2008-03-20  Sankar P  <psankar@novell.com>

	* e-plugin.c: (ep_load):
	Changed a stupid conditional statement, 
	in the previous commit.

2008-03-19  Sankar P  <psankar@novell.com>

	** Fix for bug #496839 

	* e-plugin.c: (ep_load), (e_plugin_load_plugins),
	(e_plugin_get_configure_widget):
	* e-plugin.h:
	- Implement Plugin Load Levels. You can decide
	on which load-level you want your plugin to be loaded.
	- Load Levels are mandatory if you need other language loaders
	like Mono-Loader or Python-Loader.
	- Introduce FLAGS as part of EPlugin. Futuristic. 

2008-03-17  Alex Rostovtsev  <tetromino@gmail.com>

	** Fix for bug #522631

	* e-profile-event.c: Make 'e_profile_event_emit' non-static when 
	ENABLE_PROFILING is defined.

2008-03-11  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #513951

	* e-mktemp.c (get_dir):
	* e-util.c (get_lock_filename):
	Use e_get_user_data_dir() instead of constructing the full path.

	* e-util.c (e_get_user_data_dir):
	New function returns the base directory for Evolution user data.
	This should be the /only/ place in the application where this
	directory is hard-coded.

	* e-util.c (e_file_update_save_path), (e_file_get_save_path):
	Emit warnings when saving to GConf fails.

2008-02-19  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #209353

	* e-text-event-processor-emacs-like.c:
	(e_text_event_processor_emacs_like_event):
	Allow paste text on mouse middle button click.

2008-02-18  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #515744

	* e-config.c: (ep_finalise): Use proper member to free.

2008-02-08  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #509741

	* e-error.c (e_error_newv):
	If the error dialog has no primary text, fallback to the window
	title for the "primary" data key.  This is what gets displayed
	in the status bar.

	* e-error.c (e_error_count_buttons):
	New function counts buttons in a dialog's action area.

2008-01-24  Tor Lillqvist  <tml@novell.com>
