@@ -3,20 +3,20 @@
 
  <error id="ask-save-file-exists-overwrite" type="error" default="GTK_RESPONSE_CANCEL">
   <_title>Overwrite file?</_title>
-  <_primary>File exists &quot;{0}&quot;.</_primary>
+  <_primary>File exists "{0}".</_primary>
   <_secondary>Do you wish to overwrite it?</_secondary>
   <button stock="gtk-cancel" response="GTK_RESPONSE_CANCEL"/>
   <button _label="_Overwrite" response="GTK_RESPONSE_OK"/>
  </error>
 
  <error id="no-save-file" type="error">
-  <_primary>Cannot save file &quot;{0}&quot;.</_primary>
-  <_secondary>Because &quot;{1}&quot;.</_secondary>
+  <_primary>Cannot save file "{0}".</_primary>
+  <_secondary>Because "{1}".</_secondary>
  </error>
 
  <error id="no-load-file" type="error">
-  <_primary>Cannot open file &quot;{0}&quot;.</_primary>
-  <_secondary>Because &quot;{1}&quot;.</_secondary>
+  <_primary>Cannot open file "{0}".</_primary>
+  <_secondary>Because "{1}".</_secondary>
  </error>
 
 </error-list>
