@@ -1,3 +1,12 @@
+2008-04-07  Takao Fujiwara  <takao.fujiwara@sun.com>
+
+	reviewed by: Milan Crha
+
+	** Fix for bug #408579
+
+	* mail.error.xml:
+	  Changed '&quot;' to '\"' to work with intltool.
+
 2008-04-06  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes bug #335891
